Arreglar flags de compilacion?

--- a/gtk/Makefile
+++ b/gtk/Makefile
@@ -1,16 +1,12 @@
 CC=gcc
 CFLAGS=-Ofast -march=native -mtune=native
-GTK_CFLAGS := $(shell pkg-config --cflags gtk+-3.0)
-GTK_CLIBS := $(shell pkg-config --libs gtk+-3.0)
 SRCS=gtk-app.c
-OBJS=$(SRCS:.c=.o)
 TARGET=gtk-window
+GTK_EXTRA := $(shell pkg-config --cflags --libs gtk+-3.0)
 
-all: $(OBJS)
-	$(CC) $(CFLAGS) $(GTK_CFLAGS) $(GTK_CLIBS) $(OBJS) -o $(TARGET)
-
-%.o: %.c
-	$(CC) $(CFLAGS) $(GTK_CFLAGS) $(GTK_CLIBS) $(CFLAGS) -c $< -o $@
+all:
+	#gcc gtk-app.c -o gtk-window $(shell pkg-config --cflags --libs gtk+-3.0)
+	$(CC) $(CFLAGS) $(SRCS) -o $(TARGET) $(GTK_EXTRA)
 
 clean: 
 	rm -f $(OBJS) $(TARGET)
