Anadir ventana de confirmacion y renombrar archivos

--- a/gtk/Makefile
+++ b/gtk/Makefile
@@ -1,12 +1,14 @@
 CC=gcc
 CFLAGS=-Ofast -march=native -mtune=native
-SRCS=gtk-app.c main_window.c
+SRCS=main.c gui.c dialogs.c
 TARGET=gtk-window
+DEBUG_TARGET=gtk-debug
 GTK_EXTRA := $(shell pkg-config --cflags --libs gtk+-3.0)
 
 all:
 	#gcc gtk-app.c -o gtk-window $(shell pkg-config --cflags --libs gtk+-3.0)
 	$(CC) $(CFLAGS) $(SRCS) -o $(TARGET) $(GTK_EXTRA)
+	$(CC) $(CFLAGS) $(SRCS) -o $(DEBUG_TARGET) $(GTK_EXTRA) -DMODULE_DEBUG
 
 clean: 
 	rm -f $(OBJS) $(TARGET)
